tests/snapshots/sources__allows_git.snap
---
source: tests/sources.rs
expression: diags
---
[
  {
    "fields": {
      "code": "allowed-source",
      "graphs": [
        {
          "Krate": {
            "name": "amethyst_core",
            "version": "0.10.1"
          },
          "parents": [
            {
              "Krate": {
                "kind": "build",
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 22,
          "line": 7,
          "message": "source",
          "span": "git+https://gitlab.com/amethyst-engine/amethyst?rev=0c2da617"
        },
        {
          "column": 9,
          "line": 3,
          "message": "source allowance",
          "span": "'https://gitlab.com/amethyst-engine/amethyst/'"
        }
      ],
      "message": "'git' source explicitly allowed",
      "severity": "note"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "allowed-source",
      "graphs": [
        {
          "Krate": {
            "name": "amethyst_error",
            "version": "0.5.1"
          },
          "parents": [
            {
              "Krate": {
                "name": "amethyst_core",
                "version": "0.10.1"
              },
              "parents": [
                {
                  "Krate": {
                    "kind": "build",
                    "name": "sources",
                    "version": "0.1.0"
                  }
                }
              ]
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 22,
          "line": 8,
          "message": "source",
          "span": "git+https://gitlab.com/amethyst-engine/amethyst?rev=0c2da617"
        },
        {
          "column": 9,
          "line": 3,
          "message": "source allowance",
          "span": "'https://gitlab.com/amethyst-engine/amethyst/'"
        }
      ],
      "message": "'git' source explicitly allowed",
      "severity": "note"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "source-not-allowed",
      "graphs": [
        {
          "Krate": {
            "name": "anyhow",
            "version": "1.0.68"
          },
          "parents": [
            {
              "Krate": {
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 15,
          "line": 9,
          "message": "source",
          "span": "git+https://github.com/dtolnay/anyhow?branch=master"
        }
      ],
      "message": "detected 'git' source not explicitly allowed",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "allowed-source",
      "graphs": [
        {
          "Krate": {
            "name": "krates",
            "version": "0.12.6"
          },
          "parents": [
            {
              "Krate": {
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 15,
          "line": 45,
          "message": "source",
          "span": "git+https://github.com/EmbarkStudios/krates?branch=main"
        },
        {
          "column": 9,
          "line": 4,
          "message": "source allowance",
          "span": "'https://github.com/EmbarkStudios/krates'"
        }
      ],
      "message": "'git' source explicitly allowed",
      "severity": "note"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "allowed-source",
      "graphs": [
        {
          "Krate": {
            "name": "line-wrap",
            "version": "0.1.1"
          },
          "parents": [
            {
              "Krate": {
                "kind": "build",
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 17,
          "line": 49,
          "message": "source",
          "span": "git+https://bitbucket.org/marshallpierce/line-wrap-rs"
        },
        {
          "column": 9,
          "line": 5,
          "message": "source allowance",
          "span": "'https://bitbucket.org/marshallpierce/line-wrap-rs'"
        }
      ],
      "message": "'git' source explicitly allowed",
      "severity": "note"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "source-not-allowed",
      "graphs": [
        {
          "Krate": {
            "name": "spdx",
            "version": "0.3.4"
          },
          "parents": [
            {
              "Krate": {
                "kind": "dev",
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 12,
          "line": 94,
          "message": "source",
          "span": "git+https://github.com/EmbarkStudios/spdx?tag=0.3.4"
        }
      ],
      "message": "detected 'git' source not explicitly allowed",
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
