tests/snapshots/sources__allows_gitlab_org.snap
---
source: tests/sources.rs
expression: diags
---
[
  {
    "fields": {
      "code": "source-not-allowed",
      "graphs": [
        {
          "Krate": {
            "name": "anyhow",
            "version": "1.0.68"
          },
          "parents": [
            {
              "Krate": {
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 15,
          "line": 1,
          "message": "source",
          "span": "git+https://github.com/dtolnay/anyhow?branch=master"
        }
      ],
      "message": "detected 'git' source not explicitly allowed",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "source-not-allowed",
      "graphs": [
        {
          "Krate": {
            "name": "krates",
            "version": "0.12.6"
          },
          "parents": [
            {
              "Krate": {
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 15,
          "line": 11,
          "message": "source",
          "span": "git+https://github.com/EmbarkStudios/krates?branch=main"
        }
      ],
      "message": "detected 'git' source not explicitly allowed",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "source-not-allowed",
      "graphs": [
        {
          "Krate": {
            "name": "line-wrap",
            "version": "0.1.1"
          },
          "parents": [
            {
              "Krate": {
                "kind": "build",
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 17,
          "line": 13,
          "message": "source",
          "span": "git+https://bitbucket.org/marshallpierce/line-wrap-rs"
        }
      ],
      "message": "detected 'git' source not explicitly allowed",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "source-not-allowed",
      "graphs": [
        {
          "Krate": {
            "name": "spdx",
            "version": "0.3.4"
          },
          "parents": [
            {
              "Krate": {
                "kind": "dev",
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 12,
          "line": 27,
          "message": "source",
          "span": "git+https://github.com/EmbarkStudios/spdx?tag=0.3.4"
        }
      ],
      "message": "detected 'git' source not explicitly allowed",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "unmatched-organization",
      "graphs": [],
      "labels": [
        {
          "column": 16,
          "line": 3,
          "message": "no crate source fell under this organization",
          "span": "amethyst-engine"
        }
      ],
      "message": "allowed 'gitlab.com' organization was not encountered",
      "severity": "warning"
    },
    "type": "diagnostic"
  }
]
